--- a/pages/register/css/style.css
+++ b/pages/register/css/style.css
@@ -1,6 +1,6 @@
 body {
   background: #fff;
-  background-image: url("../background.png");
+  background-image: url("../img/background.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
