Formulario para añadir dirección de recolección

--- a/resources/css/my-login.css
+++ b/resources/css/my-login.css
@@ -5,8 +5,20 @@ html,body {
 body.my-login-page {
 	background-color: #f7f9fb;
 	font-size: 14px;
+	color:#424242;
 }
 
+.bg{
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/background.png");
+  position: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.6;
+
+}
 .my-login-page .brand {
 	width: 100px;
 	height: 100px;
@@ -31,6 +43,7 @@ body.my-login-page {
 
 .my-login-page .card.fat {
 	padding: 10px;
+	/*opacity: 0.9;*/
 }
 
 .my-login-page .card .card-title {
@@ -40,18 +53,31 @@ body.my-login-page {
 .my-login-page .form-control {
 	border-width: 2.3px;
 }
+.my-login-page .form-control:focus {
+	border-color: #BF7300;
+}
 
 .my-login-page .form-group label {
 	width: 100%;
 }
 
+.my-login-page .btn.btn-primary {
+    background: #DC8502;
+    border-color: #BF7300;
+}
+a{
+    color: #BF7300;
+}
+a:hover{
+    color: #BF7300;
+}
 .my-login-page .btn.btn-block {
 	padding: 12px 10px;
 }
 
 .my-login-page .footer {
 	margin: 40px 0;
-	color: #888;
+	color: #666;
 	text-align: center;
 }
 
