--- a/resources/dashboard/css/style.css
+++ b/resources/dashboard/css/style.css
@@ -110,7 +110,7 @@ body {
     width: 200px;
     border-radius: 3px;
     transition: all .3s ease;
-
+    margin-bottom: 20px;
 }
 
 .main .widget form button:hover{
