--- a/resources/css/modal.css
+++ b/resources/css/modal.css
@@ -25,8 +25,7 @@
  	background: #fff;
 
  	left: 50%;
- 	z-index: 10000;
- 	box-shadow: 0, 0, 8px, #111;
+ 	z-index: 51;
 	display: inline-block;
 	text-align: center;
 	font-size: 0;
@@ -86,4 +85,14 @@
 	padding: 5px;
 	border: solid 1px orange;
 	border-radius: 5px;
+}
+
+.close-modal
+{
+    position: absolute;
+    font-size: 20px;
+    color: white;
+    margin: 10px;
+    right: 0;
+    cursor: pointer;
 }
