--- a/resources/css/modal.css
+++ b/resources/css/modal.css
@@ -96,3 +96,28 @@
     right: 0;
     cursor: pointer;
 }
+.more-modal
+{
+	margin: 10px auto;
+	width: 50px;
+   	height: 50px;
+   	background-color: orange;
+   	border-radius: 50%;
+   	box-shadow: 0 3px 7px 0 #874300;
+   	transition: all 0.1s ease-in-out;
+
+   	font-size: 30px;
+   	color: white;
+   	text-align: center;
+   	line-height: 50px;
+	cursor: pointer;
+}
+.more-modal:hover {
+   box-shadow: 0 3px 11px 0 #874300;
+   transform: scale(1.05);
+}
+
+.expandible
+{
+	display: none;
+}
