Añadido rando de fechas para registro

--- a/resources/css/my-login.css
+++ b/resources/css/my-login.css
@@ -97,3 +97,11 @@ a:hover{
 		padding: 15px;
 	}
 }
+.invalid-feed
+{
+    display: none;
+    width: 100%;
+    margin-top: .25rem;
+    font-size: 80%;
+    color: #dc3545;
+}
