--- a/resources/css/panels.css
+++ b/resources/css/panels.css
@@ -242,6 +242,7 @@
     margin: 0 50px;
     transform: translate(0,-50%);
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .alpha-card-image
@@ -292,4 +293,13 @@
 .more-modal.redi
 {
     background: #F44336;
+}
+
+.user-image.update
+{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
